# music-review

./: .dockerignore  .env.example  .env.server.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  TODOs.md  compose.yml  pyproject.toml  streamlit_app.py  test.py
.cursor/rules/: english-code-german-ui-only.mdc  german-umlauts-frontend.mdc  no-emojis-or-icons-by-default.mdc
.cursor/skills/music-review-server/: SKILL.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  pipeline_data.yml
.github/workflows/: artist-image-batch.yml  ci.yml  deploy.yml  metadata-refresh.yml  update-database.yml  update-visual-screenshots.yml
.streamlit/: config.toml
archive/: streamlit_app_legacy.py
deploy/: Caddyfile  README.md  docker-entrypoint-api.sh  hourly-update.cron.example  production.crontab
docs/: artist-image-batch.md  artist-images-implementation-plan.md  codex-cloud-workflow.md  deezer-api.md  metadata-refresh.md  plattenradar-design-evaluierung-2026-06-28.md  plattenradar-designrunde-layout-befunde.md  plattenradar-v1-frontend-concept.md  plattenradar-v1-product-api.md  playlist-generierung-anforderungen.md  playlist-generierung-umsetzungsplan.md  playlist-pr-review-feedback.md  playlist-v2-redesign-plan.md  playlists-evaluierung-2026-06-30.md  score-lab-spec.md  scoring-analyse-und-roadmap.md  spotify-web-api.md
frontend/: .dockerignore  Dockerfile  README.md  index.html  nginx.conf  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.node.json  vite.config.ts
frontend/scripts/: capture-filter-controls.mjs
frontend/src/: App.tsx  types.ts  vite-env.d.ts
frontend/src/components/: AccountFavoritesSection.tsx  AktuellRankingList.test.tsx  AktuellRankingList.tsx  AppShell.tsx  ArtistImage.tsx  ArtistListThumbnail.test.tsx  ArtistListThumbnail.tsx  AuthDialog.test.tsx  AuthDialog.tsx  BalanceSlider.tsx  CardExcerpt.tsx  CommunityStyleMap.test.tsx  CommunityStyleMap.tsx  CommunityStyleWeights.tsx  EntdeckenHighlightsSection.tsx  EntdeckenRankingList.tsx  HighlightAccentPanel.test.tsx  HighlightAccentPanel.tsx  HighlightColumnCard.test.tsx  HighlightColumnCard.tsx  OverallScoreWeightControl.tsx  PlaylistGenerator.tsx  PresetPillBar.tsx  ProfileOverviewPage.tsx  ProfilePage.tsx  ProfileSetupShell.tsx  RecommendationCard.test.tsx  RecommendationCard.tsx  RecommendationHighlights.tsx  RecommendationList.tsx  RecommendationTagLegend.tsx  ResultsFilterPanel.tsx  ResultsListPrelude.test.tsx  ResultsListPrelude.tsx  SaveHeartButton.tsx  SaveProfileConfirmation.tsx  SaveProfilePrompt.test.tsx  SaveProfilePrompt.tsx  TasteFilterControls.tsx  ThresholdSlider.tsx  (+2 more)
frontend/src/data/: mockRecommendations.ts
frontend/src/lib/: aktuellPage.test.ts  aktuellPage.ts  apiClient.test.ts  apiClient.ts  apiClientContext.tsx  artistImageApi.test.ts  artistImageApi.ts  artistImageLookupKey.test.ts  artistImageLookupKey.ts  artistInitials.test.ts  artistInitials.ts  authDialogCopy.test.ts  authDialogCopy.ts  authForm.test.ts  authForm.ts  authProfileOverwrite.test.ts  authProfileOverwrite.ts  authSessionStorage.test.ts  authSessionStorage.ts  balanceSlider.test.ts  balanceSlider.ts  communityMapChoice.test.ts  communityMapChoice.ts  communityStyleMapLayout.test.ts  communityStyleMapLayout.ts  communityWeightMapping.test.ts  entdeckenPage.ts  (+75 more)
pages/: 0_Profil.py  0b_Einstieg.py  0c_Anmelden.py  0d_Nutzerkonto_anlegen.py  10_Deezer_Callback.py  1_Artist_Flow.py  1_Community_Auswahl.py  2_Entdecken.py  2_Genre_Flow.py  3_Combined_Flow.py  3_Streaming_Verbindungen.py  4_Text_Flow.py  5_Filter_Flow.py  6_Recommendations_Flow.py  7_Freitext_Qualitaet.py  7_Score_Lab.py  8_Neueste_Rezensionen.py  9_Playlist_Erzeugen.py  9_Spotify_Playlists.py  _streamlit_ctx.py  deezer_connection_ui.py  deezer_oauth_kickoff.py  deezer_token_persist.py  filter_state.py  hub_destinations.py  konto_session_panel.py  neueste_deezer_playlist_section.py  neueste_reviews_pool.py  neueste_spotify_playlist_section.py  page_css.py  page_formatting.py  page_helpers.py  playlist_section.py  profil_auth_actions.py  profile_session.py  recommendations_pool.py  spotify_connection_ui.py  spotify_oauth_kickoff.py  spotify_token_persist.py  taste_widget_sync.py  (+1 more)
scripts/: api_smoke_test.py  check_deploy_api_health.sh  check_deploy_frontend_health.sh  dev_fetch_artist.py  ensure_pnpm.sh  full_data_update.py  install_production_cron.sh  run_live_screenshots.py  server.sh  start_artist_image_batch.sh  start_metadata_refresh.sh  start_update_db.sh  sync_server_git.sh  update_chroma_communities.py  update_database.py  update_visual_references_linux.sh  verify_artist_image_pipeline.py  visual_api_server.py
src/music_review/: __init__.py  config.py  text_encoding.py  text_excerpt.py
src/music_review.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: fixture_paths.py  test_config.py  test_fixture_paths.py  test_models.py  test_streamlit_app.py
tests/dashboard/: test_preference_ranking.py  test_recommendation_scoring.py
tests/io/: test_jsonl.py  test_reviews_jsonl.py
tests/music_review/: test_config.py  test_text_encoding.py  test_text_excerpt.py
tests/pages/: test_10_Deezer_Callback.py  test_6_recommendations_flow.py  test_9_Playlist_Erzeugen.py  test_9_Spotify_Playlists.py  test_deezer_connection_ui.py  test_deezer_oauth_kickoff.py  test_deezer_token_persist.py  test_hub_destinations.py  test_konto_session_panel.py  test_neueste_deezer_playlist_section.py  test_neueste_reviews_pool.py  test_neueste_spotify_playlist_section.py  test_page_helpers.py  test_playlist_section.py  test_profil_auth_actions.py  test_profile_cookie_helpers.py  test_recommendations_pool.py  test_score_lab_page.py  test_spotify_connection_ui.py  test_spotify_oauth_kickoff.py  test_streaming_verbindungen.py  test_taste_widget_sync.py
tests/scripts/: test_install_production_cron.py  test_run_live_screenshots.py  test_server_sh.py
tests/visual_fixtures/: artist_images.jsonl  update_batches.jsonl
(+247 files in other folders)
