[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# ---------------------------------------------------------------------------
# Project metadata
# ---------------------------------------------------------------------------

[project]
name = "music-review"
version = "0.1.0"
description = "Music review scraper and enrichment pipeline."
readme = "README.md"
requires-python = ">=3.12,<3.14"
license = "MIT"

authors = [
  { name = "Thomas Plischke" },
]

dependencies = [
  "bcrypt>=4.0",
  "fastapi>=0.115",
  "httpx>=0.27",
  "beautifulsoup4>=4.12",
  "lxml>=5.2",
  "networkx>=3.2",
  "openai",
  "plotly>=5.18",
  "pydantic>=2.0",
  "python-dotenv",
  "musicbrainzngs",
  "requests",
  "pillow>=10.0",
  "extra-streamlit-components>=0.1.70",
  "streamlit>=1.50",
  "uvicorn>=0.30",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.6",
  "mypy>=1.11",
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "pre-commit>=3.8",
  "types-requests",
  "types-beautifulsoup4",
  "lxml-stubs",
]

# ---------------------------------------------------------------------------
# Hatch build configuration
# ---------------------------------------------------------------------------

[tool.hatch.build.targets.wheel]
packages = ["src/music_review"]

# ---------------------------------------------------------------------------
# Hatch environments
# ---------------------------------------------------------------------------

[tool.hatch.envs.default]
installer = "uv"
features = ["dev"]

[tool.hatch.envs.default.scripts]
update-db = "python scripts/update_database.py {args:}"
full-data-update = "python scripts/full_data_update.py {args:}"
# Default bind/browser host: see .streamlit/config.toml (127.0.0.1 for Spotify OAuth).
dashboard = "streamlit run streamlit_app.py {args:}"
api = "uvicorn music_review.api.app:create_app --factory {args:--reload}"
api-smoke = "python scripts/api_smoke_test.py {args:}"
prod-update = "python -m music_review.pipeline.production_update {args:}"
graph-build = "python -m music_review.pipeline.retrieval.reference_graph_cli {args:}"
community-genre-labels = "python -m music_review.pipeline.retrieval.community_genre_labels {args:}"
community-broad-categories = "python -m music_review.pipeline.retrieval.community_broad_categories {args:}"
dq-report = "python -m music_review.pipeline.data_quality.cli {args:}"
frontend-install = "corepack pnpm --dir frontend install"
frontend-playwright-install = "corepack pnpm --dir frontend playwright:install"
frontend = "corepack pnpm --dir frontend dev"
frontend-test = "corepack pnpm --dir frontend test"
frontend-build = "corepack pnpm --dir frontend build"
frontend-screenshot = "corepack pnpm --dir frontend screenshot"

# --- Lint environment -------------------------------------------------------

[tool.hatch.envs.lint]
installer = "uv"
features = ["dev"]

[tool.hatch.envs.lint.scripts]
check = "ruff check {args:.}"
format = "ruff format --check {args:.}"
typing = "mypy {args:src/music_review}"
all = "rc=0; ruff check {args:.} || rc=$?; ruff format --check {args:.} || rc=$?; mypy {args:src/music_review} || rc=$?; exit $rc"
fix = [
  "ruff check --fix {args:.}",
  "ruff format {args:.}",
]

# --- Test environment -------------------------------------------------------

[tool.hatch.envs.test]
installer = "uv"
features = ["dev"]

[tool.hatch.envs.test.scripts]
run = "pytest {args:tests}"
cov = "pytest --cov=music_review --cov-report=term-missing {args:tests}"

# ---------------------------------------------------------------------------
# Ruff configuration
# ---------------------------------------------------------------------------

[tool.ruff]
line-length = 88
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]

[tool.ruff.lint.isort]
known-first-party = ["music_review"]

# ---------------------------------------------------------------------------
# Mypy configuration
# ---------------------------------------------------------------------------

[tool.mypy]
python_version = "3.12"
mypy_path = "src"
packages = ["music_review"]
explicit_package_bases = true
strict = false
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
  "music_review.pipeline.retrieval.reference_graph_cli",
  "music_review.pipeline.scraper.service",
  "music_review.pipeline.data_quality.models",
  "music_review.pipeline.data_quality.checks_reviews",
  "music_review.pipeline.data_quality.checks_metadata",
  "music_review.pipeline.data_quality.checks_artifacts",
  "music_review.pipeline.data_quality.report",
  "music_review.pipeline.data_quality.run",
  "music_review.pipeline.data_quality.cli",
]
disallow_untyped_defs = true

# ---------------------------------------------------------------------------
# Pytest configuration
# ---------------------------------------------------------------------------

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

# ---------------------------------------------------------------------------
# Coverage configuration
# ---------------------------------------------------------------------------

[tool.coverage.run]
source_pkgs = ["music_review"]
branch = true

[tool.coverage.report]
show_missing = true
skip_empty = true
